maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: not found: value Marked
    if (Marked(x, y+1)){
        ^